--- a/package.json
+++ b/package.json
@@ -1,22 +1,35 @@
 {
-  "name": "bun-react-template",
-  "version": "0.1.0",
-  "private": true,
+  "name": "binxelweb2",
   "type": "module",
+  "private": true,
   "scripts": {
-    "dev": "bun --hot src/index.tsx",
-    "build": "bun build ./src/index.html --outdir=dist --sourcemap --target=browser --minify --define:process.env.NODE_ENV='\"production\"' --env='BUN_PUBLIC_*'",
-    "start": "NODE_ENV=production bun src/index.tsx"
-  },
-  "dependencies": {
-    "@tanstack/react-virtual": "^3.13.18",
-    "lucide-react": "^0.562.0",
-    "react": "^19",
-    "react-dom": "^19"
+    "dev": "vite dev --port 3000",
+    "build": "vite build && tsc --noEmit",
+    "preview": "vite preview",
+    "start": "npx serve dist/client"
   },
   "devDependencies": {
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@types/bun": "latest"
+    "@tsconfig/vite-react": "^7.0.2",
+    "@types/bun": "latest",
+    "@types/node": "^25.0.6",
+    "@types/react": "^19.2.8",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.2",
+    "vite": "^7.3.1",
+    "vite-tsconfig-paths": "^6.0.4"
+  },
+  "peerDependencies": {
+    "typescript": "^5"
+  },
+  "dependencies": {
+    "@tanstack/devtools-vite": "^0.4.1",
+    "@tanstack/react-devtools": "^0.9.2",
+    "@tanstack/react-router": "^1.147.3",
+    "@tanstack/react-router-devtools": "^1.149.0",
+    "@tanstack/react-start": "^1.149.1",
+    "@tanstack/react-virtual": "^3.13.18",
+    "lucide-react": "^0.562.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   }
 }
